# rumina

./: Cargo.toml  Makefile  README.md  args.py  bam_splitter.py  build.rs  cov_reporter.py  dedReport.py  default.nix  depth.py  driver.py  filter_groups.py  install.sh  logo.py  m.py  main.py  merge_reports.py  process.py  requirements.txt  rumina  rumina.nix  shell.nix  snv.py  uclean.py
.github/workflows/: cargo_test.yml  release.yml  rust-ci.yml
bam_processor/: Cargo.toml
bam_processor/src/: bottomhash.rs  dedup_correct.rs  deduplicator.rs  group_report.rs  grouper.rs  main.rs  main_dedup.rs  merge.rs  merge_report.rs  pair_merger.rs  processor.rs  progbars.rs  read_io.rs  read_picker.rs  readkey.rs  report.rs  utils.rs  window_processor.rs
multibam/: Cargo.toml
multibam/src/: main.rs
onesie_remover/: Cargo.toml
onesie_remover/src/: main.rs
pair_merger/: Cargo.toml
pair_merger/src/: main.rs  merge.rs  merge_report.rs  realign.rs
rumina/: Cargo.toml  build.rs
rumina/src/: args.rs  cli.rs  group_report.rs  main.rs  merge.rs  pair_merger.rs  process.rs  realign.rs  utils.rs
snv/: Cargo.toml
snv/src/: bottomhash.rs  grouper.rs  main.rs  processor.rs  read_io.rs
src/: args.rs  bktree.rs  bottomhash.rs  cli.rs  deduplicator.rs  extract.rs  group_report.rs  grouper.rs  io.rs  main.rs  main_dedup.rs  merge.rs  merge_report.rs  pair_merger.rs  process.rs  processor.rs  progbars.rs  read_channel.rs  read_picker.rs  realign.rs  record.rs  test.rs  utils.rs  window_processor.rs
src/bam_io/: bam_io.rs  bam_reader.rs  fastq_io.rs  file_io.rs  mod.rs
src/cli/: dedup_args.rs  extract_args.rs  info.rs  misc.rs  mod.rs
src/group/: bktree.rs  graph_based.rs  mod.rs
src/group_handler/: group_handler.rs  mod.rs
src/io/: bam_io.rs  bam_reader.rs  fastq_dedup_io.rs  fastq_extract_io.rs  fastq_io.rs  fastq_output.rs  fastq_writer.rs  fastqio.rs  file_io.rs  mod.rs
src/ngram/: mod.rs  ngram.rs
src/pair_merge/: merge.rs  mod.rs  pair_merger.rs
src/process/: bam_process.rs  fastq_process.rs  file_process.rs  mod.rs
src/read_store/: bottomhash.rs  mod.rs  pair_bundles.rs  read_store.rs
src/record/: mod.rs  record.rs
test/: README.md  SRR2057564_sub_ext.bam  SRR2057564_sub_ext.bam.bai  test_dedup.sh  test_extract.sh
