[package]
name = "bam_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.46.0"
bam = "0.1.4"
# indexmap = "2.2.6"
rand = "0.8.5"
strsim = "0.11.1"
indicatif = "0.17.8"
indexmap = {version = "2.2.6", features = ["rayon"]}
regex = "1.10.4"
rayon = "1.10.0"
parking_lot = {version = "0.12.2", features = ["deadlock_detection"]}

[profile.release]
codegen-units = 1
lto = "fat"
target-cpu = "native"
opt-level = 3

