[package]
name = "bam_processor"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
strsim = "0.11.1"
indexmap = {version = "2.2.6", features = ["rayon"]}
rayon = "1.10.0"
parking_lot = {version = "0.12.2"}
clap = {version = "4.5.4", features = ["derive"]}
tikv-jemallocator = "0.5"
rust-htslib = "0.47.0"
arrayvec = "0.7.6"
colored = "2"
indicatif = "0.17.8"
num-format = "0.4.4"
crossbeam = "0.8.4"
bio = "2.0.3"
log = "0.4.25"
simple-logging = "2.0.2"

[profile.release]
codegen-units = 1
lto = "fat"
# target-cpu = "native"
opt-level = 3
panic = 'abort'

[profile.dev]
panic = 'abort'
