[package]
name = "pair_merger"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = "0.47.0"
rayon = "1.10.0"
clap = {version = "4.5.4", features = ["derive"]}

[profile.release]
codegen-units = 1
lto = "fat"
# target-cpu = "native"
opt-level = 3
panic = 'abort'

[profile.dev]
panic = 'abort'
