[package]
name = "pair_merger"
version = "0.1.0"
edition = "2021"

[dependencies]
rust-htslib = "0.47.0"
rayon = "1.10.0"
indexmap = {version = "2.5.0", features = ["rayon"]}
clap = {version = "4.5.4", features = ["derive"]}
crossbeam = "0.8.4"
tikv-jemallocator = "0.5"
colored = "2"
num-format = "0.4.4"
parking_lot = {version = "0.12.2"}

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = 'abort'

[profile.dev]
panic = 'abort'
