[package]
name = "rumina"
description = "High-throughput UMI-aware deduplication of next-generation sequencing data"
version = "0.9.0"
authors = ["Eli Piliper <epiliper@outlook.com>"]
edition = "2021"
repository = "https://github.com/epiliper/rumina"
homepage = "https://github.com/epiliper/rumina"
readme = "README.md"
keywords = ["bioinformatics", "barcodes", "sequencing", "bam", "deduplication"]
categories = ["science", "command-line-utilities"]

[badges]
maintenance = { status = "actively_developed" }

[dependencies]
rand = "0.8.5"
strsim = "0.11.1"
indexmap = {version = "2.2.6", features = ["rayon"]}
rayon = "1.10.0"
parking_lot = {version = "0.12.2"}
clap = {version = "4.5.4", features = ["derive"]}
tikv-jemallocator = "0.5"
rust-htslib = "0.47.0"
arrayvec = "0.7.6"
colored = "2"
indicatif = "0.17.8"
num-format = "0.4.4"
crossbeam = "0.8.4"
bio = "2.0.3"
log = "0.4.25"
num_cpus = "1.16.0"
simple-logging = "2.0.2"
 
[profile.release]
codegen-units = 1
lto = "fat"
# target-cpu = "native"
opt-level = 3
panic = 'abort'

[profile.dev]
panic = 'abort'
